[package]
name = "depcheck-json-parser"
version = "0.10.0"
authors = ["Jamie Wright"]
description = "JSON Parser and Processor for OWASP Dependency Checker. To be used as part of a security monitoring and reporting toolchain."
homepage = "https://github.com/the-wright-jamie/depcheck-json-parser"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
